﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-06 Michal Čihař  <michal@cihar.com>
    * import.php: Correctly report that file could not be read.

2005-10-05 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php, tbl_properties_table_info.php: detect
      MySQL 5.0.13 views
    * libraries/display_tbl.lib.php: bug #1306833, full text link broken,
      thanks to Vernon Lyon - vlyon
    * libraries/charset_conversion.lib.php: PMA_MYSQL_INT_VERSION is not
      defined at login time but what tested
    * libraries/display_create_table.lib.php, bug #1311384, Create table 
      dialog on escaped wildcard privileges

2005-10-04 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/functions.js, libraries/sql_query_form.lib.php:
      fixed JavaScript malfunction in querybox textarea with Opera

2005-10-03 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: support for Execute_priv

2005-10-01 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.

2005-09-30 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php, db_details_structure.php, db_operations.php,
      libraries/check_user_privileges.php, /display_create_database.lib.php,
      /display_create_table.lib.php: bug #1307208, detect lack of privileges
      before showing the "Create new table" dialog. Please test.
      TODO: detect escaped wildcard privileges

2005-09-30 Michal Čihař  <michal@cihar.com>
    * libraries/display_export.lib.php, libraries/export/sql.php,
      db_operations.php, tbl_properties_operations.php: Fix auto increment
      export (bug #1309257).

2005-09-28 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_alter.php, libraries/common.lib.php, /relation.lib.php:
      bug #1262250, cannot change ENUM default value to empty

2005-09-28 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/sql_query_form.lib.php: removed unneeded variable,